--- a/app/src/main/res/layout/profile_maker_layout.xml
+++ b/app/src/main/res/layout/profile_maker_layout.xml
@@ -17,7 +17,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/nameEditText"
         android:hint="Enter your name"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal" />
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tutoring"
-        android:id="@+id/checkBox"
+        android:id="@+id/tutoringCheckBox"
         android:layout_marginTop="16dp"
         android:textSize="15sp"
         android:layout_gravity="center_horizontal" />
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cooking"
-        android:id="@+id/checkBox2"
+        android:id="@+id/cookingCheckBox"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal" />
 
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Babysitting"
-        android:id="@+id/checkBox3"
+        android:id="@+id/babysittingCheckBox"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal" />
 
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Driving"
-        android:id="@+id/checkBox4"
+        android:id="@+id/drivingCheckBox"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal" />
 
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Heavy Lifting"
-        android:id="@+id/checkBox5"
+        android:id="@+id/liftingCheckBox"
         android:layout_marginTop="16dp"
         android:layout_gravity="center_horizontal" />
 
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:id="@+id/button"
+        android:id="@+id/submitButton"
         android:layout_gravity="right" />
 
 </LinearLayout>
