--- a/app/src/main/res/layout/request_job.xml
+++ b/app/src/main/res/layout/request_job.xml
@@ -31,7 +31,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestTutoringCheckBox"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -42,7 +43,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestCookingCheckBox"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -53,7 +55,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestBabysittingCheckBox"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -64,7 +67,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestLiftingCheckBox"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -75,7 +79,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestDrivingCheckBox"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -86,7 +91,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true"
+            android:id="@+id/requestMiscCheckBox"/>
 
 
     </LinearLayout>
@@ -97,6 +103,7 @@
         android:text="Next"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:id="@+id/requestNextButton"/>
 
 </RelativeLayout>
