--- a/app/src/main/res/layout/profile_maker_layout.xml
+++ b/app/src/main/res/layout/profile_maker_layout.xml
@@ -1,83 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Make a Profile"
-        android:id="@+id/title"
-        android:layout_gravity="center_horizontal"
-        android:textSize="25sp"
-        android:textColor="@android:color/black"
-        />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/nameEditText"
-        android:hint="Enter your name"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose what you can do"
-        android:id="@+id/textView"
-        android:layout_marginTop="16dp"
-        android:textSize="20sp"
-        android:textColor="@android:color/black"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Create A Profile:"
+            android:textColor="#757575"
+            android:textSize="28sp" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tutoring"
-        android:id="@+id/tutoringCheckBox"
-        android:layout_marginTop="16dp"
-        android:textSize="15sp"
-        android:layout_gravity="center_horizontal" />
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="Enter your name" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cooking"
-        android:id="@+id/cookingCheckBox"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Tags:"
+            android:layout_marginLeft="16dp"
+            android:textColor="#757575"
+            android:textSize="24sp" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Babysitting"
-        android:id="@+id/babysittingCheckBox"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Driving"
-        android:id="@+id/drivingCheckBox"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal" />
+        <CheckBox
+            android:id="@+id/tutoringCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="tutoring"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
 
-    <CheckBox
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Heavy Lifting"
-        android:id="@+id/liftingCheckBox"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal" />
+        <CheckBox
+            android:id="@+id/cookingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="cooking"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
 
+        <CheckBox
+            android:id="@+id/babysittingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="babysitting"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/drivingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="heavy lifting"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/liftingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="driving"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+
+
+    </LinearLayout>
     <Button
+        android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/submitButton"
-        android:layout_gravity="right" />
-
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:text="Next"  />
+</RelativeLayout>
