--- a/app/src/main/res/layout/request_job.xml
+++ b/app/src/main/res/layout/request_job.xml
@@ -4,106 +4,105 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Select tags:"
-        android:textSize="24sp"
-        android:id="@+id/instructions"
         android:layout_marginTop="16dp"
+        android:text="Select tags:"
         android:textColor="#757575"
-        />
+        android:textSize="24sp" />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/instructions">
+        android:layout_below="@id/instructions"
+        android:orientation="vertical">
 
         <CheckBox
+            android:id="@+id/requestTutoringCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
             android:text="tutoring"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/requestCookingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"
-            android:id="@+id/requestTutoringCheckBox"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingLeft="24dp"
             android:text="cooking"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/requestBabysittingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"
-            android:id="@+id/requestCookingCheckBox"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingLeft="24dp"
             android:text="babysitting"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/requestLiftingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"
-            android:id="@+id/requestBabysittingCheckBox"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingLeft="24dp"
             android:text="heavy lifting"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
+            android:textAllCaps="true"
+            android:textSize="20sp" />
+
+        <CheckBox
+            android:id="@+id/requestDrivingCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
-            android:textAllCaps="true"
-            android:id="@+id/requestLiftingCheckBox"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingLeft="24dp"
             android:text="driving"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-light"
             android:textAllCaps="true"
-            android:id="@+id/requestDrivingCheckBox"/>
+            android:textSize="20sp" />
 
         <CheckBox
+            android:id="@+id/requestMiscCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="miscellaneous"
-            android:textSize="20sp"
-            android:paddingLeft="24dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
+            android:paddingLeft="24dp"
+            android:text="miscellaneous"
             android:textAllCaps="true"
-            android:id="@+id/requestMiscCheckBox"/>
+            android:textSize="20sp" />
 
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/requestNextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:id="@+id/requestNextButton"/>
+        android:text="Next" />
 
 </RelativeLayout>
