--- a/app/src/main/res/layout/profile_maker_layout.xml
+++ b/app/src/main/res/layout/profile_maker_layout.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/blue_waves"
+        android:scaleType="centerCrop"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,8 +22,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Create A Profile:"
-            android:textColor="#757575"
-            android:textSize="28sp" />
+            android:textSize="28sp"
+            android:textStyle="bold"
+            />
 
         <EditText
             android:id="@+id/nameEditText"
@@ -33,8 +41,9 @@
             android:layout_height="wrap_content"
             android:text="Select Tags:"
             android:layout_marginLeft="16dp"
-            android:textColor="#757575"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="bold"
+            />
 
 
         <CheckBox
