--- a/app/src/main/res/layout/request_job.xml
+++ b/app/src/main/res/layout/request_job.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/blue_waves"
+        android:scaleType="centerCrop"
+        />
+
     <TextView
         android:id="@+id/instructions"
         android:layout_width="wrap_content"
@@ -10,16 +17,20 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="Select tags:"
-        android:textColor="#757575"
-        android:textSize="24sp" />
+        android:text="Select tags"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/instructions"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <CheckBox
             android:id="@+id/requestTutoringCheckBox"
@@ -29,7 +40,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-light"
             android:paddingLeft="24dp"
-            android:text="tutoring"
+            android:text="Tutoring"
             android:textAllCaps="true"
             android:textSize="20sp" />
 
@@ -93,7 +104,6 @@
             android:textAllCaps="true"
             android:textSize="20sp" />
 
-
     </LinearLayout>
 
     <Button
@@ -104,5 +114,6 @@
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:text="Next" />
+
 
 </RelativeLayout>
