--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#76FF03</item>
+        <item name="colorPrimary">#689F38</item>
         <item name="colorPrimaryDark">#757575</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorButtonNormal">#76FF03</item>
+        <item name="colorAccent">#000000</item>
+        <item name="colorButtonNormal">#689F38</item>
     </style>
 
 </resources>
